--- a/LDS_VAE.ipynb
+++ b/LDS_VAE.ipynb
@@ -82,17 +82,18 @@
     "\n",
     "This sampling function, and the loss function(comes later) are really where all the magic of variational approximate posterior with neural networks appear. In variational inference, we approximate the interactable posterior distribution $p(z|x)$ with a $q(z|x)$ that comes from a tractable class (for example Gaussian family). In the choice of an approximate posterior, we should consider the following:\n",
     "\n",
-    "1.  We need a family of distributions that can make the random variables differentiable by reparameterization for  backpropagation (for example, for a multivariate Gaussian approximate posterior $ q(z|x)= N(\\mu, \\sum=RR')$, reparameterization is $z=\\mu + R * \\epsilon$).\n",
-    "2. We need to be able to easily sample from the approximate posterior to generate data by moving the randomness to an $\\epsilon$ term.\n",
-    "3. We need to be able to calculate the entropy of the approximate posterior to measure its distance with prior by KL Divergence. \n",
-    "4. We need an approximate posterior that reflects our expectation of the relationships between latent variables using graphical models.\n",
+    "1.  We need a family of distributions such that the two expectations in the ELBO i.e $E_q[log p(x,z)]$ and $E_q[log  q(z|x)]$ can be computed. \n",
+    "2. In order to use autoencoding variational bayes we need to be able to make the random variables differentiable by reparameterization for  backpropagation (for example, for a multivariate Gaussian approximate posterior $ q(z|x)= N(\\mu, \\sum=RR')$, reparameterization is $z=\\mu + R * \\epsilon$).\n",
+    "3. We need to be able to easily sample from the approximate posterior to generate data by moving the randomness to an $\\epsilon$ term.\n",
+    "4. We need to be able to calculate the entropy of the approximate posterior to measure its distance with prior by KL Divergence. \n",
+    "5. We need an approximate posterior that reflects our expectation of the relationships between latent variables using graphical models.\n",
     "\n",
     "In the case of a simple VAE, \n",
     "\n",
-    "1. the approximate posterior is multivariate Gaussian that can be reparameterized easily using [$\\mu + \\exp$(z_log_var/2) * $\\epsilon$] \n",
-    "2. the randomness is moved to epsilon $N(0, I)$ after the reparameterization. \n",
-    "3. The entropy has a closed form calculated in the kl_loss term. \n",
-    "4. The model assumes independent and identically distributed-iid Gaussians for the graphical model which is reflected in the the diagonal covariance matrix $\\sum=I$.\n",
+    "- the approximate posterior is multivariate Gaussian that can be reparameterized easily using [$\\mu + \\exp$(z_log_var/2) * $\\epsilon$] \n",
+    "- the randomness is moved to epsilon $N(0, I)$ after the reparameterization. \n",
+    "- The entropy has a closed form calculated in the kl_loss term. \n",
+    "- The model assumes independent and identically distributed-iid Gaussians for the graphical model which is reflected in the the diagonal covariance matrix $\\sum=I$.\n",
     "\n",
     "However, the multivariate Gaussian approximate posterior covariance matrix can have an arbitrary structure depending on the graphical model chosen for latent variables. For example if dealing with time series data, one may expect smooth chage of latent variables over time in which case we can choose a Kalman filter graphical model which has a tri-diagonal covariance matrix.  Or if one expects the dynamic regime to change over time, a switching LDS might make more sense. Whatever approximate posterior we choose, it needs to meet the above-mentioned criteria."
    ]
