--- a/LDS_VAE.ipynb
+++ b/LDS_VAE.ipynb
@@ -157,7 +157,7 @@
     "X_bar=Dense(original_dim,activation='sigmoid')\n",
     "\n",
     "# we instantiate these layers separately so as to reuse them later\n",
-    "h_decoded = h_decoder(z)\n",
+    "h_decoded = h_decoder(y)\n",
     "X_decoded = X_bar(h_decoded)"
    ]
   },
